css/style.css
/* ... */
.project-title{
	font-size: 2rem;
	text-transform: uppercase;
}

.project-description{
	line-height: 1.5;
}

.project-link{
	margin: 1rem 0;
	display: inline-block;
	text-decoration: none;
	background-color: var(--primary-color);
	color: #fff;
	padding: 10px 20px;
	border: 2px solid transparent;
}

.project-link:hover{
	background-color: #fff;
	color: var(--primary-color);
	border-color: var(--primary-color);
}


/***************TIMELINE SECTION*****************/
.timeline ul {
	padding: 20px 0;
}

/* Line */
.timeline ul li{
	width: 6px;
	background-color: var(--primary-color);
	position: relative;
	padding-top: 50px;
}

/* Dots */
.timeline ul li::after {
	content: '';
	position: absolute;
	left: 50%;
	bottom: 15px;
	background-color: var(--secondary-color);
	width: 16px;
	height: 16px;
	transform: translateX(-50%);
	border-radius: 50%;
	transition: all .3s cubic-bezier(0.6, 0.04, 0.98, 0.335);
}

/*Boxes plus hide*/
.timeline ul li div{
	position: relative;
	width: calc(100vw - 66px);
	background-color: var(--primary-color);
	padding: 1.3rem;
	box-shadow: 0 0.2px 40px rgba(0, 0, 0, .15);
	bottom: 0;
	left: 30px;
	line-height: 1.7;
	transition: all 0.5s ease-in-out;
	visibility: hidden;
	opacity: 0;
	transform: translateX(200px);
}


/* Show boxes*/
.timeline ul li.show div{
	visibility: visible;
	opacity: 1;
	transform: translate(0);
}

.timeline ul li.show::after{
	background-color: var(--primary-color);
}

/* Show left side div*/
	.timeline ul li.show:nth-child(even) div{
		transform: translateX(0);
}


/* Arrows Base */
.timeline div:before{
	content: '';
	position: absolute;
	bottom: 5px;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 8px 16px 8px 8px;
}

@media only screen and (max-width: 600px) {
	.timeline ul li:nth-child(even) div::before{
		border-color: transparent;
		border-right-color: var(--primary-color);
		left: -22px;
	}	
}

/* Right Side Arrows and Left Side Arrows*/
.timeline ul li:nth-child(odd) div::before
{
	border-color: transparent;
	border-right-color: var(--primary-color);
	left: -22px;
}

.timeline ul li div > h4{
	color: var(--secondary-color);
	margin-bottom: 3px;
}
.timeline ul li div > p{
	color: #fff;
}

/***************CONTACT SECTION*****************/
#timeline {
	overflow-x: hidden;
}

#contact .contact{
	margin-top: 30px;
	display: flex;
	align-items: center;
}

.contact > div{
	flex: 1;
}

.contact-container{
	display: none;
}
.contact-img{
	max-width: 100%;
	border: 4px solid var(--primary-color);
}
.contact-text{
	padding: 30px;
	line-height: 1.8;
}

.contact-text > h2{
	font-size: 3rem;
}
.contact-text > p{
	font-size: 2.5rem;
}

.contact-text > a{
	display: inline-block;
	background-color: var(--primary-color);
	color: #fff;
	text-decoration: none;
	padding: 10px 30px;
}

@media only screen and (max-width: 767.9px) {
	#about .info {
		background: url('../img/Joshua\ Folorunsho\ mobile.webp') center center/cover
			no-repeat;
	}
}

@media only screen and (min-width: 768px) and (max-width: 899.9px){

	.timeline ul li:nth-child(even) div::before{
		border-color: transparent;
		border-right-color: var(--primary-color);
		left: -22px;
	
	}	
}

@media only screen and (min-width: 768px) {
	html {
		font-size: 65.625%; /*10.5px*/
	}

	#about .info {
		background: url('../img/Joshua\ Folorunsho\ desktop.webp') center center/cover
			no-repeat;
	}

	.container .header::-webkit-scrollbar {
		width: 1.5em;
	}
	.container .header::-webkit-scrollbar-track {
		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
	}
	.container .header::-webkit-scrollbar-thumb {
		background-color: darkgrey;
		outline: 1px solid slategrey;
	}

	.container .header {
		width: 300px;
		height: 100%;
		position: fixed;
		overflow: auto;
		padding: 20px;
	}

	.container .header .hamburger {
		display: none;
	}

	header .img-container > img {
		margin-top: 6rem;
		margin-bottom: 2rem;
		width: 17rem;
		height: 15.6rem;
	}
	.big-nav > h1 {
		margin-bottom: 5rem;
	}

	.big-nav {
		display: block !important;
	}

	ul a:hover {
		color: var(--secondary-color);
	}

	main {
		margin-left: 300px;
	}

	/***************WORK SECTION*****************/
	#work > div{
		display: flex;
		justify-content: space-between;
	}

	.project{
		flex-basis: 48%;
	}

	/*Timeline styling*/
	.timeline ul li{
		margin-left: 20px;
	}
	
	.timeline ul li div{
		width: calc(100vw - 400px);
		transform: translateX(200px);
	}

	/* Contact section */
	#contact .contact{
		margin-top: 100px;
	}

}
@media only screen and (min-width: 600px) and (max-width: 767.9px), (min-width: 1000px){
	/*Timeline styling*/
	.timeline ul li{
		margin:auto;
	}

	
	.timeline ul li div{
		width: 250px;
	}

	
	/* Right side boxes*/
	.timeline ul li:nth-child(odd) div{
		left: 30px;
	}
	/* Left side boxes*/
	.timeline ul li:nth-child(even) div{
		left : -275px;
		transform: translateX(-200px)
	}


	/*Left Side Arrows*/
	.timeline ul li:nth-child(even) div::before{
		border-color: transparent;
		border-width: 8px 8px 8px 16px;;
		border-left-color: var(--primary-color);
		right: -22px;
	}

}
	


@media only screen and (min-width: 500px) and (max-width: 767.9px),
	(min-width: 850px) {
	.card-container {
		display: flex;
	}

	.card {
		width: 46%;
	}

}


@media only screen and (min-width: 900px){
		/*Timeline styling*/
		.timeline ul li{
			margin: auto;
		}
		
		.timeline ul li div{
			width: 255px;
		}
		
		.timeline ul li:nth-child(even) div{
			transform: translateX(-200px);
		}

		/* Left side boxes*/
		.timeline ul li:nth-child(even) div{
			left : -275px;
		}

			/*Left Side Arrows*/
		.timeline ul li:nth-child(even) div::before{
			border-color: transparent;
			border-width: 8px 8px 8px 16px;;
			border-left-color: var(--primary-color);
			right: -22px;
		}

		#contact{
			height: 100vh;
		}

		.contact-container{
			display: block;
		}
		
}
/* ... */

